# LMS-System

./: Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml  requirements.txt
commands/: run_app.sh
docs/: db_struct.drawio
src/: alembic.ini  main.py
src/api/enums/: role.py
src/api/errors/: repository.py  usecase.py
src/api/handlers/api/: __init__.py  auth.py
src/api/handlers/middlewares/: auth.py  handle_error.py
src/api/interfaces/: postgres_repository.py  redis_repository.py
src/api/models/: base.py  user.py
src/api/repositories/: base_postgres_repository.py  base_redis_repository.py  user_repository.py
src/api/schemas/dto/: session.py  user.py
src/api/schemas/request/: auth.py
src/api/schemas/response/: base.py
src/api/usecase/: auth_service.py  email_service.py  session_service.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_16_2302-78e73bab5e97_create_user_table.py
src/settings/: db.py  logger.py  redis.py  settings.py
src/tests/: fixtures.py  test_session_service.py
src/utils/: crypto.py  hash.py
