[project]
name = "lms-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi-mail>=1.4.2",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyright>=1.1.400",
    "ruff>=0.11.9",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard,standart]>=0.34.2",
]
